# new-c-project

./: CMakeLists.txt  README.md
src/: helpers.h  main.c
